[project]
name = "survis"
version = "0.1.0"
description = ""
authors = [{ name = "Tboy-AK" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pdf2image (>=1.17.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "survis"
version = "0.1.0"
package-mode = false
